--- a/content/dev.html
+++ b/content/dev.html
@@ -1,5 +1,6 @@
 +++
 draft = false
+menus = ['footer']
 title = "DEV PAGE"
 +++
 <a href="./404.html">404</a>
@@ -25,6 +26,10 @@ Line-<br>&lt;br&gt;eak
 <br>
 <button style="background-color: red; border-color: red; border-radius: 100%; aspect-ratio: 1 / 1; width: 3em"></button>
 <br> <code>import std;</code> is so useful
+<video controls>
+  <source src="{{ with resources.Get `video/change_da_world.mp4`}}{{.Permalink}}{{end}}">
+  Change da world meme
+</video>
 <section>
   <h2>Elements Not shown</h2>
   <ul>
